add basket and add category page and subcategory page

--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -48,7 +48,7 @@
 =g($color1, $color2)
 	background-image: linear-gradient(to bottom, $color1, $color2)
 =gr($color1, $color2)
-	background-image: linear-gradient(to left, $color1, $color2)
+	background-image: linear-gradient(to right, $color1, $color2)
 =gt($color1, $color2)
 	background-image: linear-gradient(to top, $color1, $color2)
 
