--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -75,6 +75,12 @@ h4
 		width: 50%
 	&-3
 		width: 25%
+	&-4
+		width: 33.33%
+	&-9
+		width: 75%
+	&-12
+		width: 100%
 	&-20
 		width: 20%
 	&-22
@@ -82,6 +88,8 @@ h4
 	&-18
 		width: 18%
 
+.text-center
+	text-align: center
 // title
 .title
 	padding: 76px 0
@@ -99,7 +107,7 @@ h4
 		bottom: 0
 		left: 0
 		transform: scale(1, 1)
-		transition: transform .2s linear
+		transition: transform .2s linear, background .3s linear
 	&:hover
 		&:before
 			transform: scale(0, 1)
@@ -189,3 +197,177 @@ h4
 			transition: color .3s linear
 			&:hover
 				color: $pink
+
+// overlay
+.overlay
+	position: absolute
+	left: 0
+	top: 0
+	right: 0
+	bottom: 0
+	width: 100%
+	height: 100%
+	z-index: 9995
+	background-color: rgba($black, .5)
+	cursor: pointer
+	display: none
+
+// popup
+.popup
+	&-fixed
+		position: fixed
+		top: 0
+		right: 0
+		width: 360px
+		height: 100vh
+		background-color: $white
+		z-index: 9999
+		padding: 30px 40px 40px
+		// display: none
+
+// breadcrumbs
+.breadcrumbs
+	font-size: 0
+	li
+		display: inline-block
+		padding: 0 2px
+		position: relative
+		&:not(:first-child)
+			&:before
+				content: ""
+				width: 4px
+				height: 4px
+				background-color: $pink
+				border-radius: 50%
+				position: absolute
+				left: -2px
+				top: 50%
+		&.active
+			a
+				cursor: default
+				pointer-events: none
+				color: $white
+		a
+			padding: 0 10px
+			font-size: $text-xs
+			color: #9ea2a8
+			letter-spacing: .05em
+			display: inline-block
+
+// aside
+.aside
+	padding: 80px 20px 20px 0
+	background-color: #f5f5f5
+	position: relative
+	&:before
+		content: ""
+		position: absolute
+		top: 0
+		right: 100%
+		height: 100%
+		width: 3000px
+		background-color: #f5f5f5
+	&__title
+		font-weight: 700
+		font-size: $text-exmd
+		margin: -5px 0 35px 0
+
+// checkbox
+.checkbox,
+.chechbox label
+	padding-left: 0
+	white-space: nowrap
+.checkbox,
+.main-item__btn
+	font-size: 0
+	margin-bottom: 12px
+	label,
+	a
+		min-height: 20px
+		display: inline-block
+		color: #818181
+		cursor: pointer
+		font-weight: 400
+		font-size: $text-sm
+		position: relative
+		&:hover
+			&:before
+				border-color: $pink
+		&:before
+			content: ""
+			display: inline-block
+			vertical-align: text-bottom
+			width: 20px
+			height: 20px
+			border: 1px solid transparent
+			background-color: $white
+			border-radius: 2px
+			margin-right: 10px
+			position: relative
+			top: 2px
+.checkbox
+	label
+		letter-spacing: .025em
+		span
+			font-size: $text-xs
+			color: #c6c7c8
+			margin-left: 10px
+		&:before
+			transition: border-color .3s linear
+		&:after
+			content: ""
+			position: absolute
+			width: 10px
+			height: 10px
+			border-radius: 2px
+			background-color: $black-lighten
+			left: 5px
+			top: 7px
+			visibility: hidden
+			opacity: 0
+			transition: visibility .3s linear, opacity .3s linear
+	input[type="radio"]
+		&:checked + label
+			&:before
+				border-color: $black-lighten
+			&:after
+				visibility: visible
+				opacity: 1
+input[type="checkbox"],
+input[type="radio"]
+	display: none
+
+// sotring
+.sorting
+	margin-bottom: 20px
+	+clr
+	&__title
+		float: left
+		margin-bottom: 20px
+		letter-spacing: .2em
+		font-weight: 700
+		font-size: $text-xs
+		text-transform: uppercase
+	&__list
+		margin: 0 -20px
+		padding: 2px 0 0 40px
+		float: left
+		font-size: 0
+		li
+			display: inline-block
+			padding: 0 20px
+			&.active
+				a
+					color: $pink
+					&:before
+						transform: scale(1,1)
+			a
+				font-size: 10px
+				text-transform: uppercase
+				letter-spacing: .2em
+				color: #818181
+				position: relative
+				font-weight: 700
+				&:before
+					background-color: $black-lighten
+					transform: scale(0, 1)
