--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -2,23 +2,29 @@
 .btn
 	background-color: $pink
 	text-align: center
+	font-size: $text-xs
 	color: $white
 	letter-spacing: .2em
 	font-weight: 700
 	border-radius: 3px
 	text-transform: uppercase
-	padding: 10px
+	padding: 9px 10px
 	display: inline-block
-	transition: background-color .3s linear
+	transition: background-color .3s linear, border-color .3s linear, color .3s linear
 	outline: none !important
+	border: 2px solid $pink
+	white-space: nowrap
+	background-clip: padding-box
 	&:hover
-		background-color: $black
+		background-color: $black-lighten
+		border-color: $black-lighten
 	&:focus
-		background-color: rgba($black, .6)
+		background-color: rgba($black-lighten, .6)
+		border-color: rgba($black-lighten, .6) !important
 	&_large
 		max-width: 280px
 		width: 100%
-		padding: 18px 10px
+		padding: 17px 10px
 	&_small
 		font-size: 0
 		.icon,
@@ -31,6 +37,22 @@
 			margin-right: 15px
 	&_block
 		display: block
+		max-width: 100%
+	&_transparent
+		background-color: transparent
+		border-color: $black-lighten
+		color: $black-lighten
+		&:hover
+			color: $white
+	&_black
+		border-color: $black-lighten
+		background-color: $black-lighten
+		color: $white
+		&:hover
+			color: $black-lighten
+			background-color: transparent
+	&_indent
+		margin-top: 40px
 	&_search
 		margin-left: 33px
 		padding: 7px
