--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -5,9 +5,9 @@
 			<div class="row">
 				<div class="col col-20">
 					<div class="sm-item">
-						<div class="logo footer__logo">
+						<a href="#" class="logo footer__logo">
 							<img src="img/logo.png" alt="THEBOTTLE">
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="col col-20">
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 				<div class="col col-18">
-					<div class="sm-item">
+					<div class="sm-item sm-item_indent">
 						<div class="sm-item__title">мы в соц. сетях</div>
 						<div class="sm-item__social">
 							<ul class="social">
